--- a/.release_info.md
+++ b/.release_info.md
@@ -2,4 +2,5 @@
 - No functional changes in the application code are present in this release
 
 ## Fixed
-- The version 1.0.0 Docker image did not work due to an error in the ENTRYPOINT instruction.
+- The pervious Docker image did not work due to an error in the ENTRYPOINT instruction and file permissions
+
