--- a/.release_info.md
+++ b/.release_info.md
@@ -1,6 +1,2 @@
-## New
-- No functional changes in the application code are present in this release
-
 ## Fixed
-- The pervious Docker image did not work due to an error in the ENTRYPOINT instruction and file permissions
-
+- Version output was not properly being set in goreleaser
