--- a/.release_info.md
+++ b/.release_info.md
@@ -1,2 +1,2 @@
-## Fixed
-- Version output was not properly being set in goreleaser
+## New
+- Added the ability to include/exclude lists of clients from the names collector
